--- a/aspnet-core/src/Neco.Abp.ConsulConfiguration.Web/Neco.Abp.ConsulConfiguration.Web.csproj
+++ b/aspnet-core/src/Neco.Abp.ConsulConfiguration.Web/Neco.Abp.ConsulConfiguration.Web.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
+    <PackageReference Include="Winton.Extensions.Configuration.Consul" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -50,5 +51,7 @@
     <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="4.4.2" />
     <PackageReference Include="Volo.Abp.SettingManagement.Web" Version="4.4.2" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
