--- a/aspnet-core/src/Neco.Abp.ConsulConfiguration.Web/appsettings.json
+++ b/aspnet-core/src/Neco.Abp.ConsulConfiguration.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44340"
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Port=3306;Database=ConsulConfiguration;Uid=root;Pwd=myPassword;"
+    "Default": "Server=localhost;Port=3306;Database=ConsulConfiguration;Uid=root;Pwd=example;"
   },
   "AuthServer": {
     "Authority": "https://localhost:44340",
@@ -11,5 +11,11 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "xVLqU8ii2HSIQjSM"
+  },
+  "Main": "Hello World!",
+  "RemoteConfiguration": {
+    "Consul": {
+      "Endpoint": "http://localhost:8500"
+    }
   }
 }
